--- a/Final.html
+++ b/Final.html
@@ -3,71 +3,89 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Display Web Map with TimeSlider</title>
+    <title>Activate Measurement Widget</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.26/esri/css/main.css">
     <script src="https://js.arcgis.com/4.26/"></script>
-
+    <style>
+      html, body, #viewDiv {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #activateButton {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 99;
+        background-color: white;
+        border: 1px solid #ccc;
+        padding: 8px 12px;
+        cursor: pointer;
+      }
+    </style>
     <script>
       require([
-        "esri/Map",
-        "esri/views/MapView",
         "esri/WebMap",
+        "esri/views/MapView",
         "esri/widgets/Legend",
         "esri/widgets/Home",
-        "esri/widgets/TimeSlider",
-        "dojo/domReady!"
-      ], function(Map, MapView, WebMap, Legend, Home, TimeSlider) {
+        "esri/widgets/Expand",
+        "esri/widgets/Compass",
+        "esri/widgets/Measurement"
+      ], function(WebMap, MapView, Legend, Home, Expand, Compass, Measurement) {
 
-        // Initialize the WebMap using the URL of your ArcGIS Online Web Map
+        // Load the WebMap 
         var webMap = new WebMap({
-          portalItem: { id: "087b0350552040a788bbc782ec0a163d" } // Your Web Map ID
+          portalItem: { id: "087b0350552040a788bbc782ec0a163d" }
         });
 
+        // Create the MapView
         var view = new MapView({
-          container: "viewDiv", // The ID of the div element
+          container: "viewDiv",
           map: webMap,
           zoom: 5,
-          center: [-98.5833, 39.8283] // Center the map over the US
+          center: [-98.5833, 39.8283] // US Coordinates
         });
 
-        // Add widgets
-        var homeWidget = new Home({
+        // Add the Measurement widget
+        var measurementWidget = new Measurement({
           view: view
         });
+        view.ui.add(measurementWidget, "bottom-right");
 
-        var legendWidget = new Legend({
-          view: view
-        });
+        // Deactivate measurement by default
+        measurementWidget.activeTool = null;
 
-        var timeSliderWidget = new TimeSlider({
-          view: view
-        });
-
-        // Add widgets to the view
-        view.ui.add(homeWidget, "top-left");
-        view.ui.add(legendWidget, "bottom-left");
-        view.ui.add(timeSliderWidget, "bottom-right");  // Positioning the TimeSlider widget
-
-        // Check if the Web Map has time-enabled layers and update the TimeSlider accordingly
-        webMap.when(function() {
-          var timeLayer = view.map.layers.find(function(layer) {
-            return layer.timeInfo; // Check if any layer has time-related data
-          });
-
-          if (timeLayer) {
-            timeSliderWidget.startTime = timeLayer.timeInfo.fullTimeExtent.start;
-            timeSliderWidget.stopTime = timeLayer.timeInfo.fullTimeExtent.end;
-            timeSliderWidget.setThumbCount(2);  // Set two thumbs for a time range
-            timeSliderWidget.setLoop(true);  // Loop the time slider if you like
+        // Add a button to activate/deactivate Measurement widget
+        document.getElementById("activateButton").onclick = function() {
+          if (measurementWidget.activeTool) {
+            measurementWidget.activeTool = null; // Deactivate
+          } else {
+            measurementWidget.activeTool = "distance"; // Activate distance measurement
           }
-        });
+        };
 
+        // Add the Legend with an Expand widget
+        var legendWidget = new Legend({ view: view });
+        var expandLegend = new Expand({
+          view: view,
+          content: legendWidget,
+          expanded: false
+        });
+        view.ui.add(expandLegend, "bottom-left");
+
+        // Add the Compass widget
+        var compassWidget = new Compass({ view: view });
+        view.ui.add(compassWidget, "top-left");
+
+        // Add the Home widget
+        var homeWidget = new Home({ view: view });
+        view.ui.add(homeWidget, "top-left");
       });
     </script>
   </head>
-
   <body>
-    <div id="viewDiv" style="height:100%;"></div>
+    <div id="viewDiv"></div>
+    <button id="activateButton">Activate/Deactivate Measurement</button>
   </body>
-
 </html>
