--- a/Final.html
+++ b/Final.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Activate Measurement Widget</title>
+    <title>Final GIS Project</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.26/esri/css/main.css">
     <script src="https://js.arcgis.com/4.26/"></script>
     <style>
